--- a/inst/rmarkdown/tabularray.qmd
+++ b/inst/rmarkdown/tabularray.qmd
@@ -310,8 +310,7 @@ mtcars[1:4, 1:5] |>
         escape = FALSE) |>
     add_header_above(
         c( "First Three" = 3, " " = 1, "Penultimate" = 1, " " = 1),
-        italic = TRUE) |> 
-        attr("kable_meta")
+        italic = TRUE)
 ```
 
 # Solved bugs
