--- a/vignettes/usingparseLatex.Rmd
+++ b/vignettes/usingparseLatex.Rmd
@@ -56,8 +56,10 @@ adds the following fields:
 - `parsedInput`:  the result of running `parseLatex(kable_input)`.
 This is the main target of edits; it is deparsed at the end to
 give the output.
-- `tablePath`:  the path within `parsedInput` to the `tabular`
-environment (or `tabularx`, `longtable`, etc.).  Thus `parsedInput[[tablePath]]` should return the table.
+- `tabularPath`:  the path within `parsedInput` to the `tabular`
+environment (or `tabularx`, `longtable`, etc.).  Thus `parsedInput[[tabularPath]]` should return the table.
+- `tablePath`:  the path within `parsedInput` to the `table` environment,
+if there is one.  Otherwise this is `NULL`.
 
 It drops these fields:
 
@@ -80,11 +82,11 @@ and put back the table.  For example:
 ```{r}
 latex <- kbl(mtcars[1:3, 1:3], format = "latex")
 table_info <- kableExtra:::magic_mirror2(latex)
-table <- with(table_info, parsedInput[[tablePath]])
+table <- with(table_info, parsedInput[[tabularPath]])
 table
 tableCell(table, 2, 4) <- "modified"
 table
-table_info$parsedInput[[table_info$tablePath]] <- table
+table_info$parsedInput[[table_info$tabularPath]] <- table
 ```
 
 ### Editing whole rows
