--- a/vignettes/usingparseLatex.Rmd
+++ b/vignettes/usingparseLatex.Rmd
@@ -53,9 +53,6 @@ an attribute named `kable_meta`.
 This branch uses `magic_mirror_latex2` to do the extraction.  It
 adds the following fields:
 
-- `parsedInput`:  the result of running `parseLatex(kable_input)`.
-This is the main target of edits; it is deparsed at the end to
-give the output.
 - `tabularPath`:  the path within `parsedInput` to the `tabular`
 environment (or `tabularx`, `longtable`, etc.).  Thus `parsedInput[[tabularPath]]` should return the table.
 - `tablePath`:  the path within `parsedInput` to the `table` environment,
@@ -69,9 +66,12 @@ and end of the table
 - `align_vector` and `align_vector_origin`:  versions of `align`
 used in computations
 
-Currently the code using `parseLatex` uses very similar arguments to the 
-original `kableExtra` code, but in the long run the internal functions should not 
-keep parsing and deparsing, they should work directly on the `parsedInput` object.
+Currently the code using `parseLatex` uses similar arguments to the 
+original `kableExtra` code, but in the internal functions do not 
+keep parsing and deparsing, the main argument is a parsed LaTeX 
+object corresponding to the kable input.  Some attributes of the kable
+input are copied over to the parsed object, and the `kable_meta` attribute
+is attached, holding the `table_info` list.
 
 ## Tasks
 
@@ -80,13 +80,15 @@ keep parsing and deparsing, they should work directly on the `parsedInput` objec
 The basic strategy is to get the parsed table, change a cell,
 and put back the table.  For example:
 ```{r}
+library(parseLatex)
 latex <- kbl(mtcars[1:3, 1:3], format = "latex")
-table_info <- kableExtra:::magic_mirror2(latex)
-table <- with(table_info, parsedInput[[tabularPath]])
+parsed <- structure(parseLatex(latex), format = "latex")
+table_info <- kableExtra:::magic_mirror2(parsed)
+table <- with(table_info, parsed[[tabularPath]])
 table
 tableCell(table, 2, 4) <- "modified"
 table
-table_info$parsedInput[[table_info$tabularPath]] <- table
+parsed[[table_info$tabularPath]] <- table
 ```
 
 ### Editing whole rows
