--- a/vignettes/awesome_table_in_pdf.Rmd
+++ b/vignettes/awesome_table_in_pdf.Rmd
@@ -6,6 +6,7 @@ output:
   pdf_document:
     toc: true
     toc_depth: 2
+    keep_tex: true
 header-includes:
   - \usepackage{booktabs}
   - \usepackage{longtable}
@@ -54,6 +55,7 @@ devtools::install_github("haozhu233/kableExtra")
 Here we are using the first few columns and rows from dataset `mtcars`
 ```{r, echo = F}
 options(kableExtra.latex.load_packages = F)
+options(knitr.table.format = "latex")
 ```
 
 ```{r}
